# rects

./: Cargo.toml
.cargo/: config.toml
src/: compute.wgsl  compute_atomic.wgsl  main.rs  query.rs  ssgi.wgsl  triangles.wgsl
src/plugins/: camera_controller.rs  mod.rs
src/plugins/ssgi/: mod.rs  post_process.wgsl  preprocess_depth.wgsl  spatial_denoise.wgsl  ssgi.wgsl
