[package]
name = "rects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
pollster = "0.3.0"
rand = "0.8.5"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "a364e56" }
winit = "0.29.15"
